[gd_scene load_steps=6 format=2]

[ext_resource path="res://gameplay/gui/gui.gd" type="Script" id=1]
[ext_resource path="res://gameplay/gui/game_over/game_over.tscn" type="PackedScene" id=2]
[ext_resource path="res://gameplay/gui/heart.png" type="Texture" id=3]
[ext_resource path="res://fonts/ubuntu_dynamicfont.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.439216, 0.164706, 0.164706, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.219608, 0.0156863, 0.0156863, 1 )

[node name="gui" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 1 )

[node name="energy_label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -94.0
margin_top = 13.0
margin_right = -13.0
margin_bottom = 27.0
text = "ENERGY: 100"

[node name="game_over" parent="." instance=ExtResource( 2 )]
visible = false

[node name="life_panel" type="Panel" parent="."]
margin_left = 7.0
margin_top = 6.0
margin_right = 158.0
margin_bottom = 66.0
custom_styles/panel = SubResource( 1 )

[node name="heart_sprite" type="Sprite" parent="life_panel"]
position = Vector2( 31, 30 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="life_label" type="Label" parent="life_panel"]
margin_left = 59.0
margin_top = 3.0
margin_right = 148.0
margin_bottom = 57.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "100"
align = 1
valign = 1
